# Parallel-Eratosthenes

./: CMakeLists.txt  eratosthenes.cpp  eratosthenes.h  main.cpp  multi_process.cpp  multi_process.h  multi_thread.cpp  multi_thread.h  single_thread.cpp  single_thread.h  test.c
